Fixed spacing issue

--- a/css/base-sass.css
+++ b/css/base-sass.css
@@ -5996,10 +5996,12 @@ a:focus {
   color: #222; }
 
 hr {
-  height: 1px;
+  height: 0;
   border: 0;
   margin: 1em 0;
-  clear: both; }
+  clear: both;
+  width: 100%;
+  border-bottom: 1px solid #ECECEC; }
 
 article .entry-content {
   overflow: hidden; }
@@ -6009,11 +6011,11 @@ article .entry-content {
 */
 img.alignright {
   float: right;
-  margin: 6px 0 0.5em 0.5em; }
+  margin: 0 0 1em 1em; }
 
 img.alignleft {
   float: left;
-  margin: 6px 0.5em 0.5em 0; }
+  margin: 0 1em 1em 0; }
 
 img.aligncenter {
   display: block;
